// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ThemeProvider /> snapshot should match snapshot 1`] = `
<ThemeProvider
  theme="darkWebex"
>
  <div
    className="md-theme-provider-wrapper md-theme-provider-globals md-theme-darkWebex mds-theme-stable-darkWebex"
  />
</ThemeProvider>
`;

exports[`<ThemeProvider /> snapshot should match snapshot with style 1`] = `
<ThemeProvider
  style={
    {
      "color": "pink",
    }
  }
>
  <div
    className="md-theme-provider-wrapper md-theme-provider-globals md-theme-darkWebex mds-theme-stable-darkWebex"
    style={
      {
        "color": "pink",
      }
    }
  />
</ThemeProvider>
`;
